# coms6998-project

./: .gitignore  README.md  setup.cfg
candbproj/: char_tokenizer.py  feature_extractors.py  gpt2_embeddings_variations.ipynb  gpt2_mfcc_embeddings.py  gpt2_random_init_variations.py  gpt2_trained.py  gpt2_varied_attn_heads.py  gpt2_varied_embeddings.py  result.py  run_all.sh  score.py  util.py
candbproj/analyze/: analysis.py  gpt2_attn_heads_analysis.py  gpt2_char_tokenizer_analysis.py  gpt2_dropout_analysis.py  gpt2_embedding_analysis.ipynb  gpt2_embeddings_analysis.py  gpt2_lobotomy_analysis.py  gpt2_pos_tokenizer_analysis.py  gpt2_random_init_analysis.py  gpt2_tokenizer_analysis.py  gpt2_trained_and_untrained_analysis.py
candbproj/experiments/: gpt2_char_tokenizer.py  gpt2_dropout_variations.py  gpt2_ipa_tokenizer.py  gpt2_lobotomy.py  gpt2_mfcc_embeddings.py  gpt2_pos_tokenizer.py  gpt2_random_init_variations.py  gpt2_trained.py  gpt2_varied_attn_heads.py  gpt2_varied_embeddings.py
candbproj/explore/: gpt2_attn_heads_exploration.ipynb
candbproj/models/: modified_gpt2.py  modified_gpt2_config.py
notes/: neural_nlp_notes.txt
results/: HeInitGPT2Model  README.md  XavierNormalInitGPT2Model  XavierUniformInitGPT2Model  gpt2_char_tokenizer_result.pkl  gpt2_trained_result.pkl  gpt2_varied_attn_heads_result.pkl  gpt2_varied_embeddings_result.pkl
src/: char_tokenizer.py  gpt2_embeddings_variations.ipynb  gpt2_random_init_variations.py  gpt2_variations.ipynb  reproduce_results.ipynb  reproducing_results.ipynb  transformers_tutorial.ipynb
(+1 files in other folders)
