[metadata]
name = computation-and-brain-project
version = file: VERSION.txt
description = Computation and the Brain Final Project
url = https://github.com/ryan-woo/coms6998-project
author = Ryan Woo, Amith Ananthram, Runwei Wang
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
  torch==1.10.0
  torchvision==0.11.1
  torchaudio==0.10.0
  transformers~=4.12
  notebook
  neural-nlp @ git+https://github.com/ryan-woo/neural-nlp.git@de1d6a4
  ipython
  ipywidgets
  notebook
  pydantic
  surfboard
  google-cloud-texttospeech
  epitran
